# fast32

./: Cargo.toml  LICENSE  README.md  d  t
benches/: comparisons.rs
cmp/: Cargo.toml  t
cmp/benches/: comparisons.rs
cmp/src/: lib.rs
cmp/tests/: alphabets.rs  comparisons.rs
src/: alphabet.rs  base32.rs  base64.rs  decode.rs  decode_base.rs  decode_bytes.rs  decode_u128.rs  decode_u64.rs  encode.rs  encode_base.rs  encode_bytes.rs  encode_u128.rs  encode_u64.rs  lib.rs  shared.rs
src/base32/: alphabet.rs  decode_base.rs  decode_bytes.rs  decode_u128.rs  decode_u64.rs  encode_bytes.rs  encode_u128.rs  encode_u64.rs  uuid.rs
src/base64/: alphabet.rs  decode_bytes.rs  decode_u128.rs  decode_u64.rs  encode_bytes.rs  encode_u128.rs  encode_u64.rs  uuid.rs
tests/: alphabets.rs  base32.rs  base64.rs  capacity.rs
